fix: fixing the height of the right container on mobile

--- a/src/assets/Pages/Home/Home.css
+++ b/src/assets/Pages/Home/Home.css
@@ -89,7 +89,8 @@ select {
 
     .rigthContainer {
         width: 100%;
-        height: 50vh;
+        min-height: 50vh;
+        max-height: 100vh;
         gap: 30px;
     }
 
